production/k8s/hello/hello-go/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-go
  labels:
    app: hello-go
spec:
  ports:
    - name: ui-backend
      port: 8080
      targetPort: 8080
  selector:
    app: hello-go
